samples/_failures_safe/1761005804_e560e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e5d69df.c: In function ‘main’:
./samples/SAFE/__tmp_8e5d69df.c:150:9: error: expected declaration or statement at end of input
  150 |         printf("Matrix is not square, skipping determinant\n");
      |         ^~~~~~
./samples/SAFE/__tmp_8e5d69df.c:150:9: error: expected declaration or statement at end of input
